Save bids to API Show more bid request data when bidding, grouped by product and country Set correct bid requests data, based on user being buyer or supplier Set up temporary store for bid requests as visible to suppliers

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -308,7 +308,7 @@ table .number {
 
 table.bids .header {
     width: 150px;
-    text-align: right;
+    text-align: left;
 }
 
 /*for pikaday calendar:*/
